{{$NEXT}}

3.005     2021-02-15 21:47:59 EST
  - Add query_p, select_p, insert_p, update_p, delete_p Mojo::Promise-returning methods to Mojo::SQLite::Database.
    These are for API compatibility with Mojo::Pg and do not provide non-blocking query functionality. (#20, Stefan Adams)
  - Use Mojo::Promise in tests instead of the deprecated and decored Mojo::IOLoop::Delay (#20, Stefan Adams)

3.004     2020-07-22 22:50:43 EDT
  - The Mojo::SQLite::Migrations sqlite attribute and the
    Mojo::SQLite::Transaction db attribute are now weak attributes, increasing
    the required version of Mojolicious to 8.03.
  - Defer loading of Mojo::IOLoop unless the callback compatibility API is
    used.
  - Newly created mojo_migrations tables from Mojo::SQLite::Migrations will use
    a primary key.
  - Recognize -json parameters in queries.

3.003     2019-10-01 15:49:43 EDT
  - Increase DBD::SQLite dependency to 1.64 to support configuring
    double-quoted string literals.
  - Disable double-quoted string literals for all connections.
    https://www.sqlite.org/quirks.html#double_quoted_string_literals_are_accepted
  - Change default SQL::Abstract identifier back to double quote.

3.002     2019-06-21 17:41:35 EDT
  - Changed default SQL::Abstract identifier quoting character to `, as double
    quoted identifiers may be interpreted as string literals if they are not
    valid identifiers. https://www.sqlite.org/quirks.html#double_quoted_string_literals_are_accepted

3.001     2018-07-20 20:25:12 EDT
  - Increase DBD::SQLite dependency to 1.54 for FTS5 support.
  - Add db attribute to Mojo::SQLite::Results and use it to prevent connections
    from being cached for reuse while results are active.
  - Add sql_for method to Mojo::SQLite::Migrations.

3.000     2017-07-20 01:16:50 EDT
  - Changed default for max_connections attribute to 1.
  - Added support for sharing the database connection cache between multiple
    Mojo::SQLite objects. (based on Mojo::Pg 4.0)