@@ -7,7 +7,7 @@ copyright_year   = 2015
 [@Author::DBOOK]
 :version = v1.0.3
 installer = ModuleBuildTiny::Fallback
-irc = irc://irc.freenode.net/#mojo
+irc = ircs://irc.libera.chat/#mojo
 pod_tests = 1
 
 [Deprecated]
